--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <p>26k Happy Customers</p>
             </div>
             <div class="hero-texts">
-                <h1 class="content">Breathe better,
+                <h1>Breathe better,
                     <br>live better!
                 </h1>
-                <p class="content">Discover how effortless breathing can enhance your life. <br> Take the first step
+                <p>Discover how effortless breathing can enhance your life. <br> Take the first step
                     Today!</p>
 
                 <button class="btn">Shop Now <i class="fa-solid fa-arrow-right"></i></button>
