Product section completed

--- a/index.html
+++ b/index.html
@@ -71,6 +71,92 @@
     </div>
     <!-- Hero-Section Ends -->
 
+    <!-- Product Section Starts -->
+    <div class="product-section-container container">
+        <div class="product-container">
+            <div class="display-product">
+                <img src="./assets/Group 0.png" alt="">
+            </div>
+            <div class="display-product-featured">
+                <img src="./assets/Group 5.png" alt="">
+                <img src="./assets/Group 8.png" alt="">
+                <img src="./assets/Group 7.png" alt="">
+                <img src="./assets/Group 6.png" alt="">
+            </div>
+        </div>
+        <div class="product-details-container">
+            <div class="product-details">
+                <div class="review">
+                    <div class="star">
+                        <img src="./assets/star.png" alt="">
+                        <img src="./assets/star.png" alt="">
+                        <img src="./assets/star.png" alt="">
+                        <img src="./assets/star.png" alt="">
+                        <img src="./assets/star.png" alt="">
+                    </div>
+                    <p>4.5</p>
+                    <p>(500+Reviews)</p>
+                </div>
+                <h1 class="product-name">Noseclip</h1>
+                <div class="price">
+                    <p>$12.00</p>
+                    <p> <strike>$20.00</strike> </p>
+                    <p>Save 10%</p>
+                </div>
+            </div>
+            <div class="description">
+                <p>Description:</p>
+                <p>A nasal clip is a small device typically used to pinch or secure the <br> nostrils for various
+                    purposes,
+                    such
+                    as during sports, medical <br> treatments, or personal health practices. It is usually made of
+                    flexible <br>
+                    or
+                    padded materials to ensure comfort and a secure fit. Common <br> uses include:</p>
+            </div>
+            <div class="description-uses">
+                <div class="description-list">
+                    <div class="description-list-1">
+                        <p>
+                            <img src="./assets/Vector.png" alt="">
+                            Boost performance</p>
+                        <p>
+                            <img src="./assets/Vector.png" alt="">
+                            Optimized Airflow</p>
+                    </div>
+                    <div class="description-list-2">
+                        <p>
+                            <img src="./assets/Vector.png" alt="">
+                            Stop snoring</p>
+                        <p>
+                            <img src="./assets/Vector.png" alt="">
+                            100% Drug Free</p>
+                    </div>
+                </div>
+                <div class="add-cart">
+                    <button class="btn">Add to cart <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="payment-option">
+                    <img src="./assets/payment-logo/Item → Img.png" alt="">
+                    <img src="./assets/payment-logo/Item → Img-1.png" alt="">
+                    <img src="./assets/payment-logo/Item → Img-2.png" alt="">
+                    <img src="./assets/payment-logo/Item → Img-3.png" alt="">
+                    <img src="./assets/payment-logo/Item → Img-4.png" alt="">
+                </div>
+                <div class="drop-down-container">
+                    <ul>
+                        <li>Sizing information <i class="fa-solid fa-angle-down"></i></li>
+                        <li>Free resizing <i class="fa-solid fa-angle-down"></i></li>
+                        <li>Money back guarantee & free returns <i class="fa-solid fa-angle-down"></i> </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <!-- Product Section Ends -->
+
     <!-- Script -->
     <script src="script.js"></script>
 </body>
