Product section completed

--- a/index.html
+++ b/index.html
@@ -119,18 +119,22 @@
                     <div class="description-list-1">
                         <p>
                             <img src="./assets/Vector.png" alt="">
-                            Boost performance</p>
+                            Boost performance
+                        </p>
                         <p>
                             <img src="./assets/Vector.png" alt="">
-                            Optimized Airflow</p>
+                            Optimized Airflow
+                        </p>
                     </div>
                     <div class="description-list-2">
                         <p>
                             <img src="./assets/Vector.png" alt="">
-                            Stop snoring</p>
+                            Stop snoring
+                        </p>
                         <p>
                             <img src="./assets/Vector.png" alt="">
-                            100% Drug Free</p>
+                            100% Drug Free
+                        </p>
                     </div>
                 </div>
                 <div class="add-cart">
