Added drop down toggle

--- a/index.html
+++ b/index.html
@@ -149,11 +149,33 @@
                 </div>
                 <div class="drop-down-container">
                     <ul>
-                        <li>Sizing information <i class="fa-solid fa-angle-down"></i></li>
-                        <li>Free resizing <i class="fa-solid fa-angle-down"></i></li>
-                        <li>Money back guarantee & free returns <i class="fa-solid fa-angle-down"></i> </li>
+                        <li class="dropdown-item">
+                            <div class="dropdown-toggle">
+                                Sizing information <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="dropdown-menu">
+                                <p>Here is sizing info: We offer multiple sizes and free resizing options.</p>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="dropdown-toggle">
+                                Free resizing <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="dropdown-menu">
+                                <p>We provide free resizing for 30 days after purchase.</p>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="dropdown-toggle">
+                                Money back guarantee & free returns <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="dropdown-menu">
+                                <p>You can return the product within 30 days for a full refund.</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
+
             </div>
         </div>
 
